// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamItem matches snapshot 1`] = `
<div
  className="MuiBox-root MuiBox-root-25 makeStyles-teamItemContainer-1"
>
  <div
    className="MuiBox-root MuiBox-root-26 makeStyles-avatarContainer-2"
  >
    <img
      alt="avatar"
      className="makeStyles-photo-3"
      height="100"
      src=""
      width="100"
    />
  </div>
  <div
    className="MuiBox-root MuiBox-root-27 makeStyles-contentContainer-4"
  >
    <p
      className="makeStyles-hostName-5"
    >
      
    </p>
    <h3
      className="makeStyles-teamTitle-6"
    >
      
    </h3>
    <div
      className="MuiBox-root MuiBox-root-28 makeStyles-infoBox-7"
    >
      <div
        className="MuiBox-root MuiBox-root-29 makeStyles-iconInfo-8"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.4375 3.75H15V1.5625H13.75V3.75H6.25V1.5625H5V3.75H1.5625C1.31395 3.75029 1.07566 3.84915 0.899907 4.02491C0.724154 4.20066 0.625289 4.43895 0.625 4.6875V17.8125C0.625289 18.0611 0.724154 18.2993 0.899907 18.4751C1.07566 18.6508 1.31395 18.7497 1.5625 18.75H18.4375C18.6861 18.7497 18.9243 18.6508 19.1001 18.4751C19.2758 18.2993 19.3747 18.0611 19.375 17.8125V4.6875C19.3747 4.43895 19.2758 4.20066 19.1001 4.02491C18.9243 3.84915 18.6861 3.75029 18.4375 3.75ZM18.125 17.5H1.875V5H5V6.5625H6.25V5H13.75V6.5625H15V5H18.125V17.5Z"
            fill="white"
          />
          <path
            d="M4.375 8.75H5.625V10H4.375V8.75Z"
            fill="white"
          />
          <path
            d="M7.8125 8.75H9.0625V10H7.8125V8.75Z"
            fill="white"
          />
          <path
            d="M10.9375 8.75H12.1875V10H10.9375V8.75Z"
            fill="white"
          />
          <path
            d="M14.375 8.75H15.625V10H14.375V8.75Z"
            fill="white"
          />
          <path
            d="M4.375 11.5625H5.625V12.8125H4.375V11.5625Z"
            fill="white"
          />
          <path
            d="M7.8125 11.5625H9.0625V12.8125H7.8125V11.5625Z"
            fill="white"
          />
          <path
            d="M10.9375 11.5625H12.1875V12.8125H10.9375V11.5625Z"
            fill="white"
          />
          <path
            d="M14.375 11.5625H15.625V12.8125H14.375V11.5625Z"
            fill="white"
          />
          <path
            d="M4.375 14.375H5.625V15.625H4.375V14.375Z"
            fill="white"
          />
          <path
            d="M7.8125 14.375H9.0625V15.625H7.8125V14.375Z"
            fill="white"
          />
          <path
            d="M10.9375 14.375H12.1875V15.625H10.9375V14.375Z"
            fill="white"
          />
          <path
            d="M14.375 14.375H15.625V15.625H14.375V14.375Z"
            fill="white"
          />
        </svg>
        <p
          className="makeStyles-minorInfo-9"
        >
          
        </p>
      </div>
      <div
        className="MuiBox-root MuiBox-root-30 makeStyles-iconInfo-8"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.99984 13.3337C11.8408 13.3337 13.3332 11.8413 13.3332 10.0003C13.3332 8.15938 11.8408 6.66699 9.99984 6.66699C8.15889 6.66699 6.6665 8.15938 6.6665 10.0003C6.6665 11.8413 8.15889 13.3337 9.99984 13.3337Z"
            fill="white"
          />
          <path
            d="M10.8332 3.39116V1.66699H9.1665V3.39116C7.70009 3.57839 6.33731 4.24714 5.29198 5.29247C4.24665 6.3378 3.57791 7.70057 3.39067 9.16699H1.6665V10.8337H3.39067C3.57763 12.3002 4.24628 13.6631 5.29167 14.7085C6.33705 15.7539 7.69998 16.4225 9.1665 16.6095V18.3337H10.8332V16.6095C12.2998 16.4227 13.6628 15.7541 14.7082 14.7087C15.7536 13.6632 16.4222 12.3002 16.609 10.8337H18.3332V9.16699H16.609C16.422 7.70047 15.7534 6.33754 14.708 5.29216C13.6626 4.24677 12.2997 3.57812 10.8332 3.39116ZM9.99984 15.0003C7.24234 15.0003 4.99984 12.7578 4.99984 10.0003C4.99984 7.24283 7.24234 5.00033 9.99984 5.00033C12.7573 5.00033 14.9998 7.24283 14.9998 10.0003C14.9998 12.7578 12.7573 15.0003 9.99984 15.0003Z"
            fill="white"
          />
        </svg>
        <p
          className="makeStyles-minorInfo-9"
        >
          
        </p>
      </div>
      <div
        className="MuiBox-root MuiBox-root-31 makeStyles-iconInfo-8"
      >
        <svg
          fill="none"
          height="18"
          viewBox="0 0 20 18"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.9997 0C9.62488 -5.58522e-09 9.25374 0.0738258 8.90745 0.217262C8.56116 0.360699 8.24652 0.570937 7.98148 0.835974C7.71645 1.10101 7.50621 1.41565 7.36277 1.76194C7.21933 2.10823 7.14551 2.47938 7.14551 2.85419C7.14551 3.22901 7.21933 3.60016 7.36277 3.94645C7.50621 4.29273 7.71645 4.60738 7.98148 4.87241C8.24652 5.13745 8.56116 5.34769 8.90745 5.49112C9.25374 5.63456 9.62488 5.70839 9.9997 5.70839C10.7567 5.70839 11.4827 5.40768 12.0179 4.87241C12.5532 4.33715 12.8539 3.61117 12.8539 2.85419C12.8539 2.09721 12.5532 1.37124 12.0179 0.835974C11.4827 0.300709 10.7567 0 9.9997 0Z"
            fill="white"
          />
          <path
            d="M16.4275 1.42578C15.8592 1.42578 15.3141 1.65154 14.9123 2.05339C14.5104 2.45524 14.2847 3.00027 14.2847 3.56857C14.2847 4.13687 14.5104 4.6819 14.9123 5.08375C15.3141 5.4856 15.8592 5.71136 16.4275 5.71136C16.9958 5.71136 17.5408 5.4856 17.9426 5.08375C18.3445 4.6819 18.5702 4.13687 18.5702 3.56857C18.5702 3.00027 18.3445 2.45524 17.9426 2.05339C17.5408 1.65154 16.9958 1.42578 16.4275 1.42578Z"
            fill="white"
          />
          <path
            d="M3.57101 1.42578C3.00271 1.42578 2.45768 1.65154 2.05583 2.05339C1.65398 2.45524 1.42822 3.00027 1.42822 3.56857C1.42822 4.13687 1.65398 4.6819 2.05583 5.08375C2.45768 5.4856 3.00271 5.71136 3.57101 5.71136C4.13931 5.71136 4.68434 5.4856 5.08619 5.08375C5.48804 4.6819 5.7138 4.13687 5.7138 3.56857C5.7138 3.00027 5.48804 2.45524 5.08619 2.05339C4.68434 1.65154 4.13931 1.42578 3.57101 1.42578Z"
            fill="white"
          />
          <path
            d="M5.71387 8.55817C5.71651 8.18104 5.86818 7.82025 6.13579 7.55451C6.40341 7.28877 6.76525 7.13964 7.14239 7.13965H12.8565C13.2354 7.13965 13.5987 7.29015 13.8666 7.55805C14.1345 7.82595 14.285 8.18931 14.285 8.56817V12.8537C14.2849 13.3033 14.2146 13.7501 14.0765 14.178C13.7601 15.1475 13.1085 15.9726 12.2387 16.5049C11.3688 17.0373 10.3377 17.2421 9.33036 17.0826C8.32307 16.9231 7.40564 16.4097 6.74281 15.6346C6.07997 14.8596 5.71516 13.8736 5.71387 12.8537V8.56817V8.55817Z"
            fill="white"
          />
          <path
            d="M4.28558 8.56817C4.28558 8.04676 4.42414 7.55963 4.66842 7.13965H1.42853C1.04966 7.13965 0.686306 7.29015 0.418406 7.55805C0.150505 7.82595 1.97727e-07 8.18931 1.97727e-07 8.56817V12.1395C-0.000194348 12.7242 0.143175 13.3 0.417519 13.8163C0.691863 14.3327 1.08879 14.7738 1.57344 15.1009C2.05809 15.428 2.61564 15.6311 3.19712 15.6923C3.7786 15.7536 4.36624 15.6712 4.90841 15.4522C4.49725 14.6474 4.28375 13.7561 4.28558 12.8523V8.56817Z"
            fill="white"
          />
          <path
            d="M15.7141 8.56817V12.8537C15.7141 13.7894 15.4899 14.6723 15.0913 15.4522C15.6335 15.6712 16.2211 15.7536 16.8026 15.6923C17.3841 15.6311 17.9416 15.428 18.4263 15.1009C18.9109 14.7738 19.3079 14.3327 19.5822 13.8163C19.8565 13.3 19.9999 12.7242 19.9997 12.1395V8.56817C19.9997 8.18931 19.8492 7.82595 19.5813 7.55805C19.3134 7.29015 18.9501 7.13965 18.5712 7.13965H15.3313C15.5742 7.55963 15.7141 8.04676 15.7141 8.56817Z"
            fill="white"
          />
        </svg>
        <p
          className="makeStyles-minorInfo-9"
        >
          2
          /
          5
        </p>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-32 makeStyles-interestsContainer-10"
    >
      <div
        className="MuiBox-root MuiBox-root-33 makeStyles-interestsLabel-11"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.0509 2.93537C16.1261 2.00326 15.0256 1.26388 13.8131 0.760017C12.6007 0.256158 11.3003 -0.00216284 9.98725 1.36397e-05C8.67396 -0.0020411 7.3733 0.256327 6.1605 0.760172C4.9477 1.26402 3.84685 2.00334 2.92162 2.93537C-0.973872 6.82986 -0.973872 13.1691 2.92162 17.0646C3.84687 17.9969 4.94787 18.7364 6.16087 19.2402C7.37386 19.7441 8.67476 20.0023 9.98825 20C11.3012 20.0023 12.6015 19.7441 13.814 19.2404C15.0265 18.7368 16.127 17.9976 17.0519 17.0656C20.9474 13.1711 20.9474 6.83185 17.0509 2.93537ZM10.1671 2.0072H9.80841C9.86935 2.00621 9.9273 1.99821 9.98825 1.99821C10.0492 1.99821 10.1061 2.00621 10.1671 2.0072ZM16.2236 14.9955H13.9826L12.7258 17.5092C11.849 17.8332 10.922 17.9999 9.98725 18.0018C9.05081 18.0001 8.12204 17.833 7.24372 17.5082L5.98985 15.0055H3.75686C2.93304 13.9813 2.37592 12.7689 2.13533 11.4767L3.99165 9.0009L2.77675 6.57009C3.1644 5.74542 3.69132 4.99375 4.33434 4.34809C5.23432 3.44497 6.33743 2.77043 7.55144 2.38087L9.98625 4.0054L12.4221 2.38187C13.6357 2.7717 14.7387 3.44582 15.6392 4.34809C16.2815 4.99298 16.808 5.7436 17.1958 6.56709L15.9808 9.0009L17.8372 11.4767C17.5977 12.7647 17.0434 13.9735 16.2236 14.9955Z"
            fill="white"
          />
          <path
            d="M6.48877 9.00068L7.98742 12.9971H11.9838L13.4825 9.00068L9.98562 6.50293L6.48877 9.00068Z"
            fill="white"
          />
        </svg>
        <p
          className="makeStyles-interestsText-12"
        >
          Related interests
        </p>
      </div>
      <div
        className="MuiBox-root MuiBox-root-34 makeStyles-interestsList-13"
      />
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-14"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        MORE
      </span>
    </button>
  </div>
</div>
`;

exports[`TeamList matches snapshot 1`] = `
<div
  className="MuiBox-root MuiBox-root-67 makeStyles-teamList-35"
>
  <div
    className="MuiBox-root MuiBox-root-68 makeStyles-teamItemContainer-1"
  >
    <div
      className="MuiBox-root MuiBox-root-69 makeStyles-avatarContainer-2"
    >
      <img
        alt="avatar"
        className="makeStyles-photo-3"
        height="100"
        src="https://avatars.githubusercontent.com/u/31045802?v=4"
        width="100"
      />
    </div>
    <div
      className="MuiBox-root MuiBox-root-70 makeStyles-contentContainer-4"
    >
      <p
        className="makeStyles-hostName-5"
      >
        Tomasz Gajda
      </p>
      <h3
        className="makeStyles-teamTitle-6"
      >
        Hackathon - Webdev and mobile applications! 
      </h3>
      <div
        className="MuiBox-root MuiBox-root-71 makeStyles-infoBox-7"
      >
        <div
          className="MuiBox-root MuiBox-root-72 makeStyles-iconInfo-8"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.4375 3.75H15V1.5625H13.75V3.75H6.25V1.5625H5V3.75H1.5625C1.31395 3.75029 1.07566 3.84915 0.899907 4.02491C0.724154 4.20066 0.625289 4.43895 0.625 4.6875V17.8125C0.625289 18.0611 0.724154 18.2993 0.899907 18.4751C1.07566 18.6508 1.31395 18.7497 1.5625 18.75H18.4375C18.6861 18.7497 18.9243 18.6508 19.1001 18.4751C19.2758 18.2993 19.3747 18.0611 19.375 17.8125V4.6875C19.3747 4.43895 19.2758 4.20066 19.1001 4.02491C18.9243 3.84915 18.6861 3.75029 18.4375 3.75ZM18.125 17.5H1.875V5H5V6.5625H6.25V5H13.75V6.5625H15V5H18.125V17.5Z"
              fill="white"
            />
            <path
              d="M4.375 8.75H5.625V10H4.375V8.75Z"
              fill="white"
            />
            <path
              d="M7.8125 8.75H9.0625V10H7.8125V8.75Z"
              fill="white"
            />
            <path
              d="M10.9375 8.75H12.1875V10H10.9375V8.75Z"
              fill="white"
            />
            <path
              d="M14.375 8.75H15.625V10H14.375V8.75Z"
              fill="white"
            />
            <path
              d="M4.375 11.5625H5.625V12.8125H4.375V11.5625Z"
              fill="white"
            />
            <path
              d="M7.8125 11.5625H9.0625V12.8125H7.8125V11.5625Z"
              fill="white"
            />
            <path
              d="M10.9375 11.5625H12.1875V12.8125H10.9375V11.5625Z"
              fill="white"
            />
            <path
              d="M14.375 11.5625H15.625V12.8125H14.375V11.5625Z"
              fill="white"
            />
            <path
              d="M4.375 14.375H5.625V15.625H4.375V14.375Z"
              fill="white"
            />
            <path
              d="M7.8125 14.375H9.0625V15.625H7.8125V14.375Z"
              fill="white"
            />
            <path
              d="M10.9375 14.375H12.1875V15.625H10.9375V14.375Z"
              fill="white"
            />
            <path
              d="M14.375 14.375H15.625V15.625H14.375V14.375Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-minorInfo-9"
          >
            24.05
          </p>
        </div>
        <div
          className="MuiBox-root MuiBox-root-73 makeStyles-iconInfo-8"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.99984 13.3337C11.8408 13.3337 13.3332 11.8413 13.3332 10.0003C13.3332 8.15938 11.8408 6.66699 9.99984 6.66699C8.15889 6.66699 6.6665 8.15938 6.6665 10.0003C6.6665 11.8413 8.15889 13.3337 9.99984 13.3337Z"
              fill="white"
            />
            <path
              d="M10.8332 3.39116V1.66699H9.1665V3.39116C7.70009 3.57839 6.33731 4.24714 5.29198 5.29247C4.24665 6.3378 3.57791 7.70057 3.39067 9.16699H1.6665V10.8337H3.39067C3.57763 12.3002 4.24628 13.6631 5.29167 14.7085C6.33705 15.7539 7.69998 16.4225 9.1665 16.6095V18.3337H10.8332V16.6095C12.2998 16.4227 13.6628 15.7541 14.7082 14.7087C15.7536 13.6632 16.4222 12.3002 16.609 10.8337H18.3332V9.16699H16.609C16.422 7.70047 15.7534 6.33754 14.708 5.29216C13.6626 4.24677 12.2997 3.57812 10.8332 3.39116ZM9.99984 15.0003C7.24234 15.0003 4.99984 12.7578 4.99984 10.0003C4.99984 7.24283 7.24234 5.00033 9.99984 5.00033C12.7573 5.00033 14.9998 7.24283 14.9998 10.0003C14.9998 12.7578 12.7573 15.0003 9.99984 15.0003Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-minorInfo-9"
          >
            Kraków
          </p>
        </div>
        <div
          className="MuiBox-root MuiBox-root-74 makeStyles-iconInfo-8"
        >
          <svg
            fill="none"
            height="18"
            viewBox="0 0 20 18"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.9997 0C9.62488 -5.58522e-09 9.25374 0.0738258 8.90745 0.217262C8.56116 0.360699 8.24652 0.570937 7.98148 0.835974C7.71645 1.10101 7.50621 1.41565 7.36277 1.76194C7.21933 2.10823 7.14551 2.47938 7.14551 2.85419C7.14551 3.22901 7.21933 3.60016 7.36277 3.94645C7.50621 4.29273 7.71645 4.60738 7.98148 4.87241C8.24652 5.13745 8.56116 5.34769 8.90745 5.49112C9.25374 5.63456 9.62488 5.70839 9.9997 5.70839C10.7567 5.70839 11.4827 5.40768 12.0179 4.87241C12.5532 4.33715 12.8539 3.61117 12.8539 2.85419C12.8539 2.09721 12.5532 1.37124 12.0179 0.835974C11.4827 0.300709 10.7567 0 9.9997 0Z"
              fill="white"
            />
            <path
              d="M16.4275 1.42578C15.8592 1.42578 15.3141 1.65154 14.9123 2.05339C14.5104 2.45524 14.2847 3.00027 14.2847 3.56857C14.2847 4.13687 14.5104 4.6819 14.9123 5.08375C15.3141 5.4856 15.8592 5.71136 16.4275 5.71136C16.9958 5.71136 17.5408 5.4856 17.9426 5.08375C18.3445 4.6819 18.5702 4.13687 18.5702 3.56857C18.5702 3.00027 18.3445 2.45524 17.9426 2.05339C17.5408 1.65154 16.9958 1.42578 16.4275 1.42578Z"
              fill="white"
            />
            <path
              d="M3.57101 1.42578C3.00271 1.42578 2.45768 1.65154 2.05583 2.05339C1.65398 2.45524 1.42822 3.00027 1.42822 3.56857C1.42822 4.13687 1.65398 4.6819 2.05583 5.08375C2.45768 5.4856 3.00271 5.71136 3.57101 5.71136C4.13931 5.71136 4.68434 5.4856 5.08619 5.08375C5.48804 4.6819 5.7138 4.13687 5.7138 3.56857C5.7138 3.00027 5.48804 2.45524 5.08619 2.05339C4.68434 1.65154 4.13931 1.42578 3.57101 1.42578Z"
              fill="white"
            />
            <path
              d="M5.71387 8.55817C5.71651 8.18104 5.86818 7.82025 6.13579 7.55451C6.40341 7.28877 6.76525 7.13964 7.14239 7.13965H12.8565C13.2354 7.13965 13.5987 7.29015 13.8666 7.55805C14.1345 7.82595 14.285 8.18931 14.285 8.56817V12.8537C14.2849 13.3033 14.2146 13.7501 14.0765 14.178C13.7601 15.1475 13.1085 15.9726 12.2387 16.5049C11.3688 17.0373 10.3377 17.2421 9.33036 17.0826C8.32307 16.9231 7.40564 16.4097 6.74281 15.6346C6.07997 14.8596 5.71516 13.8736 5.71387 12.8537V8.56817V8.55817Z"
              fill="white"
            />
            <path
              d="M4.28558 8.56817C4.28558 8.04676 4.42414 7.55963 4.66842 7.13965H1.42853C1.04966 7.13965 0.686306 7.29015 0.418406 7.55805C0.150505 7.82595 1.97727e-07 8.18931 1.97727e-07 8.56817V12.1395C-0.000194348 12.7242 0.143175 13.3 0.417519 13.8163C0.691863 14.3327 1.08879 14.7738 1.57344 15.1009C2.05809 15.428 2.61564 15.6311 3.19712 15.6923C3.7786 15.7536 4.36624 15.6712 4.90841 15.4522C4.49725 14.6474 4.28375 13.7561 4.28558 12.8523V8.56817Z"
              fill="white"
            />
            <path
              d="M15.7141 8.56817V12.8537C15.7141 13.7894 15.4899 14.6723 15.0913 15.4522C15.6335 15.6712 16.2211 15.7536 16.8026 15.6923C17.3841 15.6311 17.9416 15.428 18.4263 15.1009C18.9109 14.7738 19.3079 14.3327 19.5822 13.8163C19.8565 13.3 19.9999 12.7242 19.9997 12.1395V8.56817C19.9997 8.18931 19.8492 7.82595 19.5813 7.55805C19.3134 7.29015 18.9501 7.13965 18.5712 7.13965H15.3313C15.5742 7.55963 15.7141 8.04676 15.7141 8.56817Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-minorInfo-9"
          >
            2
            /
            10
          </p>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-75 makeStyles-interestsContainer-10"
      >
        <div
          className="MuiBox-root MuiBox-root-76 makeStyles-interestsLabel-11"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.0509 2.93537C16.1261 2.00326 15.0256 1.26388 13.8131 0.760017C12.6007 0.256158 11.3003 -0.00216284 9.98725 1.36397e-05C8.67396 -0.0020411 7.3733 0.256327 6.1605 0.760172C4.9477 1.26402 3.84685 2.00334 2.92162 2.93537C-0.973872 6.82986 -0.973872 13.1691 2.92162 17.0646C3.84687 17.9969 4.94787 18.7364 6.16087 19.2402C7.37386 19.7441 8.67476 20.0023 9.98825 20C11.3012 20.0023 12.6015 19.7441 13.814 19.2404C15.0265 18.7368 16.127 17.9976 17.0519 17.0656C20.9474 13.1711 20.9474 6.83185 17.0509 2.93537ZM10.1671 2.0072H9.80841C9.86935 2.00621 9.9273 1.99821 9.98825 1.99821C10.0492 1.99821 10.1061 2.00621 10.1671 2.0072ZM16.2236 14.9955H13.9826L12.7258 17.5092C11.849 17.8332 10.922 17.9999 9.98725 18.0018C9.05081 18.0001 8.12204 17.833 7.24372 17.5082L5.98985 15.0055H3.75686C2.93304 13.9813 2.37592 12.7689 2.13533 11.4767L3.99165 9.0009L2.77675 6.57009C3.1644 5.74542 3.69132 4.99375 4.33434 4.34809C5.23432 3.44497 6.33743 2.77043 7.55144 2.38087L9.98625 4.0054L12.4221 2.38187C13.6357 2.7717 14.7387 3.44582 15.6392 4.34809C16.2815 4.99298 16.808 5.7436 17.1958 6.56709L15.9808 9.0009L17.8372 11.4767C17.5977 12.7647 17.0434 13.9735 16.2236 14.9955Z"
              fill="white"
            />
            <path
              d="M6.48877 9.00068L7.98742 12.9971H11.9838L13.4825 9.00068L9.98562 6.50293L6.48877 9.00068Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-interestsText-12"
          >
            Related interests
          </p>
        </div>
        <div
          className="MuiBox-root MuiBox-root-77 makeStyles-interestsList-13"
        >
          Programming, 
          Technologies
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-14"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          MORE
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-78 makeStyles-teamItemContainer-1"
  >
    <div
      className="MuiBox-root MuiBox-root-79 makeStyles-avatarContainer-2"
    >
      <img
        alt="avatar"
        className="makeStyles-photo-3"
        height="100"
        src="https://avatars.githubusercontent.com/u/31045802?v=4"
        width="100"
      />
    </div>
    <div
      className="MuiBox-root MuiBox-root-80 makeStyles-contentContainer-4"
    >
      <p
        className="makeStyles-hostName-5"
      >
        Tomasz Gajda
      </p>
      <h3
        className="makeStyles-teamTitle-6"
      >
        Hackathon - Webdev and mobile applications! 
      </h3>
      <div
        className="MuiBox-root MuiBox-root-81 makeStyles-infoBox-7"
      >
        <div
          className="MuiBox-root MuiBox-root-82 makeStyles-iconInfo-8"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.4375 3.75H15V1.5625H13.75V3.75H6.25V1.5625H5V3.75H1.5625C1.31395 3.75029 1.07566 3.84915 0.899907 4.02491C0.724154 4.20066 0.625289 4.43895 0.625 4.6875V17.8125C0.625289 18.0611 0.724154 18.2993 0.899907 18.4751C1.07566 18.6508 1.31395 18.7497 1.5625 18.75H18.4375C18.6861 18.7497 18.9243 18.6508 19.1001 18.4751C19.2758 18.2993 19.3747 18.0611 19.375 17.8125V4.6875C19.3747 4.43895 19.2758 4.20066 19.1001 4.02491C18.9243 3.84915 18.6861 3.75029 18.4375 3.75ZM18.125 17.5H1.875V5H5V6.5625H6.25V5H13.75V6.5625H15V5H18.125V17.5Z"
              fill="white"
            />
            <path
              d="M4.375 8.75H5.625V10H4.375V8.75Z"
              fill="white"
            />
            <path
              d="M7.8125 8.75H9.0625V10H7.8125V8.75Z"
              fill="white"
            />
            <path
              d="M10.9375 8.75H12.1875V10H10.9375V8.75Z"
              fill="white"
            />
            <path
              d="M14.375 8.75H15.625V10H14.375V8.75Z"
              fill="white"
            />
            <path
              d="M4.375 11.5625H5.625V12.8125H4.375V11.5625Z"
              fill="white"
            />
            <path
              d="M7.8125 11.5625H9.0625V12.8125H7.8125V11.5625Z"
              fill="white"
            />
            <path
              d="M10.9375 11.5625H12.1875V12.8125H10.9375V11.5625Z"
              fill="white"
            />
            <path
              d="M14.375 11.5625H15.625V12.8125H14.375V11.5625Z"
              fill="white"
            />
            <path
              d="M4.375 14.375H5.625V15.625H4.375V14.375Z"
              fill="white"
            />
            <path
              d="M7.8125 14.375H9.0625V15.625H7.8125V14.375Z"
              fill="white"
            />
            <path
              d="M10.9375 14.375H12.1875V15.625H10.9375V14.375Z"
              fill="white"
            />
            <path
              d="M14.375 14.375H15.625V15.625H14.375V14.375Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-minorInfo-9"
          >
            24.05
          </p>
        </div>
        <div
          className="MuiBox-root MuiBox-root-83 makeStyles-iconInfo-8"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.99984 13.3337C11.8408 13.3337 13.3332 11.8413 13.3332 10.0003C13.3332 8.15938 11.8408 6.66699 9.99984 6.66699C8.15889 6.66699 6.6665 8.15938 6.6665 10.0003C6.6665 11.8413 8.15889 13.3337 9.99984 13.3337Z"
              fill="white"
            />
            <path
              d="M10.8332 3.39116V1.66699H9.1665V3.39116C7.70009 3.57839 6.33731 4.24714 5.29198 5.29247C4.24665 6.3378 3.57791 7.70057 3.39067 9.16699H1.6665V10.8337H3.39067C3.57763 12.3002 4.24628 13.6631 5.29167 14.7085C6.33705 15.7539 7.69998 16.4225 9.1665 16.6095V18.3337H10.8332V16.6095C12.2998 16.4227 13.6628 15.7541 14.7082 14.7087C15.7536 13.6632 16.4222 12.3002 16.609 10.8337H18.3332V9.16699H16.609C16.422 7.70047 15.7534 6.33754 14.708 5.29216C13.6626 4.24677 12.2997 3.57812 10.8332 3.39116ZM9.99984 15.0003C7.24234 15.0003 4.99984 12.7578 4.99984 10.0003C4.99984 7.24283 7.24234 5.00033 9.99984 5.00033C12.7573 5.00033 14.9998 7.24283 14.9998 10.0003C14.9998 12.7578 12.7573 15.0003 9.99984 15.0003Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-minorInfo-9"
          >
            Kraków
          </p>
        </div>
        <div
          className="MuiBox-root MuiBox-root-84 makeStyles-iconInfo-8"
        >
          <svg
            fill="none"
            height="18"
            viewBox="0 0 20 18"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.9997 0C9.62488 -5.58522e-09 9.25374 0.0738258 8.90745 0.217262C8.56116 0.360699 8.24652 0.570937 7.98148 0.835974C7.71645 1.10101 7.50621 1.41565 7.36277 1.76194C7.21933 2.10823 7.14551 2.47938 7.14551 2.85419C7.14551 3.22901 7.21933 3.60016 7.36277 3.94645C7.50621 4.29273 7.71645 4.60738 7.98148 4.87241C8.24652 5.13745 8.56116 5.34769 8.90745 5.49112C9.25374 5.63456 9.62488 5.70839 9.9997 5.70839C10.7567 5.70839 11.4827 5.40768 12.0179 4.87241C12.5532 4.33715 12.8539 3.61117 12.8539 2.85419C12.8539 2.09721 12.5532 1.37124 12.0179 0.835974C11.4827 0.300709 10.7567 0 9.9997 0Z"
              fill="white"
            />
            <path
              d="M16.4275 1.42578C15.8592 1.42578 15.3141 1.65154 14.9123 2.05339C14.5104 2.45524 14.2847 3.00027 14.2847 3.56857C14.2847 4.13687 14.5104 4.6819 14.9123 5.08375C15.3141 5.4856 15.8592 5.71136 16.4275 5.71136C16.9958 5.71136 17.5408 5.4856 17.9426 5.08375C18.3445 4.6819 18.5702 4.13687 18.5702 3.56857C18.5702 3.00027 18.3445 2.45524 17.9426 2.05339C17.5408 1.65154 16.9958 1.42578 16.4275 1.42578Z"
              fill="white"
            />
            <path
              d="M3.57101 1.42578C3.00271 1.42578 2.45768 1.65154 2.05583 2.05339C1.65398 2.45524 1.42822 3.00027 1.42822 3.56857C1.42822 4.13687 1.65398 4.6819 2.05583 5.08375C2.45768 5.4856 3.00271 5.71136 3.57101 5.71136C4.13931 5.71136 4.68434 5.4856 5.08619 5.08375C5.48804 4.6819 5.7138 4.13687 5.7138 3.56857C5.7138 3.00027 5.48804 2.45524 5.08619 2.05339C4.68434 1.65154 4.13931 1.42578 3.57101 1.42578Z"
              fill="white"
            />
            <path
              d="M5.71387 8.55817C5.71651 8.18104 5.86818 7.82025 6.13579 7.55451C6.40341 7.28877 6.76525 7.13964 7.14239 7.13965H12.8565C13.2354 7.13965 13.5987 7.29015 13.8666 7.55805C14.1345 7.82595 14.285 8.18931 14.285 8.56817V12.8537C14.2849 13.3033 14.2146 13.7501 14.0765 14.178C13.7601 15.1475 13.1085 15.9726 12.2387 16.5049C11.3688 17.0373 10.3377 17.2421 9.33036 17.0826C8.32307 16.9231 7.40564 16.4097 6.74281 15.6346C6.07997 14.8596 5.71516 13.8736 5.71387 12.8537V8.56817V8.55817Z"
              fill="white"
            />
            <path
              d="M4.28558 8.56817C4.28558 8.04676 4.42414 7.55963 4.66842 7.13965H1.42853C1.04966 7.13965 0.686306 7.29015 0.418406 7.55805C0.150505 7.82595 1.97727e-07 8.18931 1.97727e-07 8.56817V12.1395C-0.000194348 12.7242 0.143175 13.3 0.417519 13.8163C0.691863 14.3327 1.08879 14.7738 1.57344 15.1009C2.05809 15.428 2.61564 15.6311 3.19712 15.6923C3.7786 15.7536 4.36624 15.6712 4.90841 15.4522C4.49725 14.6474 4.28375 13.7561 4.28558 12.8523V8.56817Z"
              fill="white"
            />
            <path
              d="M15.7141 8.56817V12.8537C15.7141 13.7894 15.4899 14.6723 15.0913 15.4522C15.6335 15.6712 16.2211 15.7536 16.8026 15.6923C17.3841 15.6311 17.9416 15.428 18.4263 15.1009C18.9109 14.7738 19.3079 14.3327 19.5822 13.8163C19.8565 13.3 19.9999 12.7242 19.9997 12.1395V8.56817C19.9997 8.18931 19.8492 7.82595 19.5813 7.55805C19.3134 7.29015 18.9501 7.13965 18.5712 7.13965H15.3313C15.5742 7.55963 15.7141 8.04676 15.7141 8.56817Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-minorInfo-9"
          >
            2
            /
            10
          </p>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-85 makeStyles-interestsContainer-10"
      >
        <div
          className="MuiBox-root MuiBox-root-86 makeStyles-interestsLabel-11"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.0509 2.93537C16.1261 2.00326 15.0256 1.26388 13.8131 0.760017C12.6007 0.256158 11.3003 -0.00216284 9.98725 1.36397e-05C8.67396 -0.0020411 7.3733 0.256327 6.1605 0.760172C4.9477 1.26402 3.84685 2.00334 2.92162 2.93537C-0.973872 6.82986 -0.973872 13.1691 2.92162 17.0646C3.84687 17.9969 4.94787 18.7364 6.16087 19.2402C7.37386 19.7441 8.67476 20.0023 9.98825 20C11.3012 20.0023 12.6015 19.7441 13.814 19.2404C15.0265 18.7368 16.127 17.9976 17.0519 17.0656C20.9474 13.1711 20.9474 6.83185 17.0509 2.93537ZM10.1671 2.0072H9.80841C9.86935 2.00621 9.9273 1.99821 9.98825 1.99821C10.0492 1.99821 10.1061 2.00621 10.1671 2.0072ZM16.2236 14.9955H13.9826L12.7258 17.5092C11.849 17.8332 10.922 17.9999 9.98725 18.0018C9.05081 18.0001 8.12204 17.833 7.24372 17.5082L5.98985 15.0055H3.75686C2.93304 13.9813 2.37592 12.7689 2.13533 11.4767L3.99165 9.0009L2.77675 6.57009C3.1644 5.74542 3.69132 4.99375 4.33434 4.34809C5.23432 3.44497 6.33743 2.77043 7.55144 2.38087L9.98625 4.0054L12.4221 2.38187C13.6357 2.7717 14.7387 3.44582 15.6392 4.34809C16.2815 4.99298 16.808 5.7436 17.1958 6.56709L15.9808 9.0009L17.8372 11.4767C17.5977 12.7647 17.0434 13.9735 16.2236 14.9955Z"
              fill="white"
            />
            <path
              d="M6.48877 9.00068L7.98742 12.9971H11.9838L13.4825 9.00068L9.98562 6.50293L6.48877 9.00068Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-interestsText-12"
          >
            Related interests
          </p>
        </div>
        <div
          className="MuiBox-root MuiBox-root-87 makeStyles-interestsList-13"
        >
          Programming, 
          Technologies
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-14"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          MORE
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-88 makeStyles-teamItemContainer-1"
  >
    <div
      className="MuiBox-root MuiBox-root-89 makeStyles-avatarContainer-2"
    >
      <img
        alt="avatar"
        className="makeStyles-photo-3"
        height="100"
        src="https://avatars.githubusercontent.com/u/31045802?v=4"
        width="100"
      />
    </div>
    <div
      className="MuiBox-root MuiBox-root-90 makeStyles-contentContainer-4"
    >
      <p
        className="makeStyles-hostName-5"
      >
        Tomasz Gajda
      </p>
      <h3
        className="makeStyles-teamTitle-6"
      >
        Hackathon - Webdev and mobile applications! 
      </h3>
      <div
        className="MuiBox-root MuiBox-root-91 makeStyles-infoBox-7"
      >
        <div
          className="MuiBox-root MuiBox-root-92 makeStyles-iconInfo-8"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.4375 3.75H15V1.5625H13.75V3.75H6.25V1.5625H5V3.75H1.5625C1.31395 3.75029 1.07566 3.84915 0.899907 4.02491C0.724154 4.20066 0.625289 4.43895 0.625 4.6875V17.8125C0.625289 18.0611 0.724154 18.2993 0.899907 18.4751C1.07566 18.6508 1.31395 18.7497 1.5625 18.75H18.4375C18.6861 18.7497 18.9243 18.6508 19.1001 18.4751C19.2758 18.2993 19.3747 18.0611 19.375 17.8125V4.6875C19.3747 4.43895 19.2758 4.20066 19.1001 4.02491C18.9243 3.84915 18.6861 3.75029 18.4375 3.75ZM18.125 17.5H1.875V5H5V6.5625H6.25V5H13.75V6.5625H15V5H18.125V17.5Z"
              fill="white"
            />
            <path
              d="M4.375 8.75H5.625V10H4.375V8.75Z"
              fill="white"
            />
            <path
              d="M7.8125 8.75H9.0625V10H7.8125V8.75Z"
              fill="white"
            />
            <path
              d="M10.9375 8.75H12.1875V10H10.9375V8.75Z"
              fill="white"
            />
            <path
              d="M14.375 8.75H15.625V10H14.375V8.75Z"
              fill="white"
            />
            <path
              d="M4.375 11.5625H5.625V12.8125H4.375V11.5625Z"
              fill="white"
            />
            <path
              d="M7.8125 11.5625H9.0625V12.8125H7.8125V11.5625Z"
              fill="white"
            />
            <path
              d="M10.9375 11.5625H12.1875V12.8125H10.9375V11.5625Z"
              fill="white"
            />
            <path
              d="M14.375 11.5625H15.625V12.8125H14.375V11.5625Z"
              fill="white"
            />
            <path
              d="M4.375 14.375H5.625V15.625H4.375V14.375Z"
              fill="white"
            />
            <path
              d="M7.8125 14.375H9.0625V15.625H7.8125V14.375Z"
              fill="white"
            />
            <path
              d="M10.9375 14.375H12.1875V15.625H10.9375V14.375Z"
              fill="white"
            />
            <path
              d="M14.375 14.375H15.625V15.625H14.375V14.375Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-minorInfo-9"
          >
            24.05
          </p>
        </div>
        <div
          className="MuiBox-root MuiBox-root-93 makeStyles-iconInfo-8"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.99984 13.3337C11.8408 13.3337 13.3332 11.8413 13.3332 10.0003C13.3332 8.15938 11.8408 6.66699 9.99984 6.66699C8.15889 6.66699 6.6665 8.15938 6.6665 10.0003C6.6665 11.8413 8.15889 13.3337 9.99984 13.3337Z"
              fill="white"
            />
            <path
              d="M10.8332 3.39116V1.66699H9.1665V3.39116C7.70009 3.57839 6.33731 4.24714 5.29198 5.29247C4.24665 6.3378 3.57791 7.70057 3.39067 9.16699H1.6665V10.8337H3.39067C3.57763 12.3002 4.24628 13.6631 5.29167 14.7085C6.33705 15.7539 7.69998 16.4225 9.1665 16.6095V18.3337H10.8332V16.6095C12.2998 16.4227 13.6628 15.7541 14.7082 14.7087C15.7536 13.6632 16.4222 12.3002 16.609 10.8337H18.3332V9.16699H16.609C16.422 7.70047 15.7534 6.33754 14.708 5.29216C13.6626 4.24677 12.2997 3.57812 10.8332 3.39116ZM9.99984 15.0003C7.24234 15.0003 4.99984 12.7578 4.99984 10.0003C4.99984 7.24283 7.24234 5.00033 9.99984 5.00033C12.7573 5.00033 14.9998 7.24283 14.9998 10.0003C14.9998 12.7578 12.7573 15.0003 9.99984 15.0003Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-minorInfo-9"
          >
            Kraków
          </p>
        </div>
        <div
          className="MuiBox-root MuiBox-root-94 makeStyles-iconInfo-8"
        >
          <svg
            fill="none"
            height="18"
            viewBox="0 0 20 18"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.9997 0C9.62488 -5.58522e-09 9.25374 0.0738258 8.90745 0.217262C8.56116 0.360699 8.24652 0.570937 7.98148 0.835974C7.71645 1.10101 7.50621 1.41565 7.36277 1.76194C7.21933 2.10823 7.14551 2.47938 7.14551 2.85419C7.14551 3.22901 7.21933 3.60016 7.36277 3.94645C7.50621 4.29273 7.71645 4.60738 7.98148 4.87241C8.24652 5.13745 8.56116 5.34769 8.90745 5.49112C9.25374 5.63456 9.62488 5.70839 9.9997 5.70839C10.7567 5.70839 11.4827 5.40768 12.0179 4.87241C12.5532 4.33715 12.8539 3.61117 12.8539 2.85419C12.8539 2.09721 12.5532 1.37124 12.0179 0.835974C11.4827 0.300709 10.7567 0 9.9997 0Z"
              fill="white"
            />
            <path
              d="M16.4275 1.42578C15.8592 1.42578 15.3141 1.65154 14.9123 2.05339C14.5104 2.45524 14.2847 3.00027 14.2847 3.56857C14.2847 4.13687 14.5104 4.6819 14.9123 5.08375C15.3141 5.4856 15.8592 5.71136 16.4275 5.71136C16.9958 5.71136 17.5408 5.4856 17.9426 5.08375C18.3445 4.6819 18.5702 4.13687 18.5702 3.56857C18.5702 3.00027 18.3445 2.45524 17.9426 2.05339C17.5408 1.65154 16.9958 1.42578 16.4275 1.42578Z"
              fill="white"
            />
            <path
              d="M3.57101 1.42578C3.00271 1.42578 2.45768 1.65154 2.05583 2.05339C1.65398 2.45524 1.42822 3.00027 1.42822 3.56857C1.42822 4.13687 1.65398 4.6819 2.05583 5.08375C2.45768 5.4856 3.00271 5.71136 3.57101 5.71136C4.13931 5.71136 4.68434 5.4856 5.08619 5.08375C5.48804 4.6819 5.7138 4.13687 5.7138 3.56857C5.7138 3.00027 5.48804 2.45524 5.08619 2.05339C4.68434 1.65154 4.13931 1.42578 3.57101 1.42578Z"
              fill="white"
            />
            <path
              d="M5.71387 8.55817C5.71651 8.18104 5.86818 7.82025 6.13579 7.55451C6.40341 7.28877 6.76525 7.13964 7.14239 7.13965H12.8565C13.2354 7.13965 13.5987 7.29015 13.8666 7.55805C14.1345 7.82595 14.285 8.18931 14.285 8.56817V12.8537C14.2849 13.3033 14.2146 13.7501 14.0765 14.178C13.7601 15.1475 13.1085 15.9726 12.2387 16.5049C11.3688 17.0373 10.3377 17.2421 9.33036 17.0826C8.32307 16.9231 7.40564 16.4097 6.74281 15.6346C6.07997 14.8596 5.71516 13.8736 5.71387 12.8537V8.56817V8.55817Z"
              fill="white"
            />
            <path
              d="M4.28558 8.56817C4.28558 8.04676 4.42414 7.55963 4.66842 7.13965H1.42853C1.04966 7.13965 0.686306 7.29015 0.418406 7.55805C0.150505 7.82595 1.97727e-07 8.18931 1.97727e-07 8.56817V12.1395C-0.000194348 12.7242 0.143175 13.3 0.417519 13.8163C0.691863 14.3327 1.08879 14.7738 1.57344 15.1009C2.05809 15.428 2.61564 15.6311 3.19712 15.6923C3.7786 15.7536 4.36624 15.6712 4.90841 15.4522C4.49725 14.6474 4.28375 13.7561 4.28558 12.8523V8.56817Z"
              fill="white"
            />
            <path
              d="M15.7141 8.56817V12.8537C15.7141 13.7894 15.4899 14.6723 15.0913 15.4522C15.6335 15.6712 16.2211 15.7536 16.8026 15.6923C17.3841 15.6311 17.9416 15.428 18.4263 15.1009C18.9109 14.7738 19.3079 14.3327 19.5822 13.8163C19.8565 13.3 19.9999 12.7242 19.9997 12.1395V8.56817C19.9997 8.18931 19.8492 7.82595 19.5813 7.55805C19.3134 7.29015 18.9501 7.13965 18.5712 7.13965H15.3313C15.5742 7.55963 15.7141 8.04676 15.7141 8.56817Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-minorInfo-9"
          >
            2
            /
            10
          </p>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-95 makeStyles-interestsContainer-10"
      >
        <div
          className="MuiBox-root MuiBox-root-96 makeStyles-interestsLabel-11"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.0509 2.93537C16.1261 2.00326 15.0256 1.26388 13.8131 0.760017C12.6007 0.256158 11.3003 -0.00216284 9.98725 1.36397e-05C8.67396 -0.0020411 7.3733 0.256327 6.1605 0.760172C4.9477 1.26402 3.84685 2.00334 2.92162 2.93537C-0.973872 6.82986 -0.973872 13.1691 2.92162 17.0646C3.84687 17.9969 4.94787 18.7364 6.16087 19.2402C7.37386 19.7441 8.67476 20.0023 9.98825 20C11.3012 20.0023 12.6015 19.7441 13.814 19.2404C15.0265 18.7368 16.127 17.9976 17.0519 17.0656C20.9474 13.1711 20.9474 6.83185 17.0509 2.93537ZM10.1671 2.0072H9.80841C9.86935 2.00621 9.9273 1.99821 9.98825 1.99821C10.0492 1.99821 10.1061 2.00621 10.1671 2.0072ZM16.2236 14.9955H13.9826L12.7258 17.5092C11.849 17.8332 10.922 17.9999 9.98725 18.0018C9.05081 18.0001 8.12204 17.833 7.24372 17.5082L5.98985 15.0055H3.75686C2.93304 13.9813 2.37592 12.7689 2.13533 11.4767L3.99165 9.0009L2.77675 6.57009C3.1644 5.74542 3.69132 4.99375 4.33434 4.34809C5.23432 3.44497 6.33743 2.77043 7.55144 2.38087L9.98625 4.0054L12.4221 2.38187C13.6357 2.7717 14.7387 3.44582 15.6392 4.34809C16.2815 4.99298 16.808 5.7436 17.1958 6.56709L15.9808 9.0009L17.8372 11.4767C17.5977 12.7647 17.0434 13.9735 16.2236 14.9955Z"
              fill="white"
            />
            <path
              d="M6.48877 9.00068L7.98742 12.9971H11.9838L13.4825 9.00068L9.98562 6.50293L6.48877 9.00068Z"
              fill="white"
            />
          </svg>
          <p
            className="makeStyles-interestsText-12"
          >
            Related interests
          </p>
        </div>
        <div
          className="MuiBox-root MuiBox-root-97 makeStyles-interestsList-13"
        >
          Programming, 
          Technologies
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-14"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          MORE
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
